--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="tab-contents" id="experience">
                     <ul>
-                      
+                        <li><span>Jan 2025 - July 2025</span><br>Internship at Axtira</li>
                         <li><span>2024 - 2024</span><br>Internship at IBM.</li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
                     <ul>
                         <li><span>2025</span><br>B.Tech CSE from UPES</li>
                         <li><span>2021</span><br>PCM - 12 th from Bhartiyam International School</li>
-                        <li><span>2019</span><br>!0th ICSE from St. Joseph's College</li>
+                        <li><span>2019</span><br>10th ICSE from St. Joseph's College</li>
                     </ul>
                 </div>
             </div>
