--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="layer">
                     <h3>Employee Tracking Software</h3>
                     <p>This Software will allow you to monitor the Employees.</p>
-                    <a href="#" target="_blank">
+                    <a href="https://github.com/Addy0007/Employee-Tracking-System" target="_blank">
                         <i class="fab fa-github"></i> <!-- GitHub icon will be here -->
                     </a>
                 </div>
